--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,21 +1,3 @@
-FROM python:3.8-slim-buster
-
-RUN apt update -y && apt install awscli -y
-WORKDIR /app
-
-COPY . /app
-
-RUN pip install -r requirements.txt
-RUN pip install --upgrade accelerate
-RUN pip uninstall -y transformers accelerate
-RUN pip install transformers accelerate
-
-CMD ["python3", "app.py"]
-
-
-
-
-
 name: workflow
 
 on:
@@ -104,9 +86,9 @@ jobs:
         run: |
          docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
          
-      - name: Stop and remove container if running
-        run: |
-         docker ps -q --filter "name=texts" | grep -q . && docker stop texts && docker rm -fv texts
+      # - name: Stop and remove container if running
+      #   run: |
+      #    docker ps -q --filter "name=texts" | grep -q . && docker stop texts && docker rm -fv texts
        
       - name: Run Docker Image to serve users
         run: |
